samples/_failures_safe/1761392278_01c916_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ad7805a.c:173:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  173 | const char* token_type_to_string
      | ^~~~~
